...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSubtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/touch_target_min"
...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/touch_target_min"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical|end"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/auth_forgot_password"
...
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />

            <TextView
                android:id="@+id/textError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:background="@drawable/bg_surface_rounded"
                android:backgroundTint="@color/status_expense_container"
                android:drawablePadding="@dimen/spacing_sm"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
                tools:text="Incorrect email or password"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                style="@style/Widget.SpendWise.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/auth_sign_in"
                app:cornerRadius="@dimen/corner_radius_lg"
...
                app:layout_constraintBottom_toBottomOf="@id/textOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textOr"
                app:layout_constraintTop_toTopOf="@id/textOr" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoogle"
                style="@style/Widget.SpendWise.Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/auth_google"
                app:cornerRadius="@dimen/corner_radius_lg"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_sm"
                app:iconSize="@dimen/icon_md"
                app:iconTint="@null"
...
            android:id="@+id/textSignUpPromptLead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authx_no_account_lead"
            android:textAppearance="@style/TextAppearance.SpendWise.Body"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/textSignUpPrompt"
            app:layout_constraintEnd_toStartOf="@+id/textSignUpPrompt"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/formColumn" />

        <TextView
            android:id="@+id/textSignUpPrompt"
...
