...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/touch_target_min"
...
